# fine-grained-parallel-router

./: .gitmodules  LICENSE  README.md
alex_lookahead_maps/: UTF-8read_function.cpp  lookahead_map_vtr_extra_small_160.txt  lookahead_map_vtr_extra_small_80.txt  lookahead_map_vtr_small_160.txt
alex_lookahead_maps/may_18_maps/: lookahead_map_vtr_extra_small_160_fixed.capnp  lookahead_map_vtr_extra_small_80_fixed.capnp  lookahead_map_vtr_small_160_emap-like.capnp  lookahead_map_vtr_small_160_fixed.capnp  lookahead_map_vtr_small_80_fixed.capnp
alex_lookahead_maps/may_22_maps/: lookahead_map_vtr_extra_small_160_emap-like_any-node.capnp  lookahead_map_vtr_extra_small_80_emap-like_any-node.capnp  lookahead_map_vtr_small_80_emap-like_any-node.capnp
alex_lookahead_maps/may_2_maps/: lookahead_map_vtr_small_80.txt
pq_profiling/: .clang-format
pq_profiling/astar_sssp/: CMakeLists.txt
pq_profiling/astar_sssp/src/: benchmark.cpp  graph.cpp  graph.hpp  sssp.cpp  sssp.hpp  utility.hpp
testing/: .gitignore  README.md  profile.sh  profile_master.sh  profile_parallel.sh  profile_scalability.sh  run_test.py
vpr_profiling/: README.md
vpr_profiling/astar_fac_sweeping/: .gitignore  run_sweep.py  sweep.sh
vpr_profiling/data_analysis/: .gitignore  README.md  parse_connection_data.py
vpr_profiling/koios_profiling/: .gitignore  README.md  equivalence_place_and_route.sh  pack_and_place.sh  profile.sh  route_sink_profile.sh
vpr_profiling/mod_list_profiling/: .parse_mod_list_profile.py.swp  (+1 more)
vpr_single_conn_test/: .gitignore  README.md  run_single_conn.sh
(+10 files in other folders)
